# smaz-py3

./: CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py  smazmodule.c  tests.py
.github/workflows/: main.yml  publish.yml
smaz/: README.md  smaz.c
